[package]
name = "rusty_sand"
version = "0.1.0"
authors = ["Vlad Shcherbina <vlad.shcherbina@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "*"
winapi = { version = "*", features = ["memoryapi", "sysinfoapi"] }

[features]
clippy = []  # https://github.com/rust-lang/cargo/issues/8075

[lib]
doctest = false
