[package]
name = "exe_buf"
version = "0.1.0"
authors = ["Vlad Shcherbina <vlad.shcherbina@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = { version = "*", features = ["memoryapi", "sysinfoapi"] }

[target.'cfg(unix)'.dependencies]
libc = "*"

[lib]
doctest = false
