[package]
name = "rusty_sand"
version = "0.1.0"
authors = ["Vlad Shcherbina <vlad.shcherbina@gmail.com>"]
edition = "2018"

[dependencies]
memoffset = "*"
mimalloc = { version = "*", default-features = false, optional = true }
exe_buf = { path = "../exe_buf" }
amd64_gen = { path = "../amd64_gen" }

[lib]
doctest = false
